// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. key facts with title 1`] = `
<style>
{
  "S1": {
    "color": "inherit",
    "font-family": "GillSansMTStd-Medium",
    "font-size": "12px",
    "font-weight": "400",
    "letter-spacing": "1.2px",
    "margin-bottom": "20px",
    "margin-top": "0px",
    "padding-left": "0px",
  },
  "S10": {
    "color": "rgba(51,51,51,1)",
    "font-family": "TimesDigitalW04",
    "font-size": "16px",
    "line-height": "30px",
    "margin-bottom": "0px",
    "margin-top": "-8px",
    "padding-left": "15px",
    "width": "95%",
  },
  "S11": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "margin-bottom": "20px",
    "margin-top": "0px",
    "padding-left": "1px",
    "width": "100%",
  },
  "S12": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "-webkit-transform": "rotate(45deg)",
    "background-color": "rgba(16,53,70,1)",
    "flex-direction": "column",
    "height": "8px",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
    "top": "1px",
    "transform": "rotate(45deg)",
    "width": "8px",
  },
  "S13": {
    "color": "rgba(51,51,51,1)",
    "font-family": "TimesDigitalW04",
    "font-size": "16px",
    "line-height": "30px",
    "margin-bottom": "0px",
    "margin-top": "-8px",
    "padding-left": "15px",
    "width": "95%",
  },
  "S14": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "margin-bottom": "20px",
    "margin-top": "0px",
    "padding-left": "1px",
    "width": "100%",
  },
  "S15": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
  },
  "S16": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
  },
  "S2": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "-webkit-transform": "rotate(45deg)",
    "background-color": "rgba(16,53,70,1)",
    "flex-direction": "column",
    "height": "8px",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
    "top": "1px",
    "transform": "rotate(45deg)",
    "width": "8px",
  },
  "S3": {
    "color": "rgba(51,51,51,1)",
    "font-family": "TimesDigitalW04",
    "font-size": "16px",
    "line-height": "30px",
    "margin-bottom": "0px",
    "margin-top": "-8px",
    "padding-left": "15px",
    "width": "95%",
  },
  "S4": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "margin-bottom": "20px",
    "margin-top": "0px",
    "padding-left": "1px",
    "width": "100%",
  },
  "S5": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "-webkit-transform": "rotate(45deg)",
    "background-color": "rgba(16,53,70,1)",
    "flex-direction": "column",
    "height": "8px",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
    "top": "1px",
    "transform": "rotate(45deg)",
    "width": "8px",
  },
  "S6": {
    "background-color": "transparent",
    "color": "rgba(0,102,153,1)",
    "font-family": "inherit",
    "font-size": "inherit",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
  },
  "S7": {
    "color": "rgba(51,51,51,1)",
    "font-family": "TimesDigitalW04",
    "font-size": "16px",
    "line-height": "30px",
    "margin-bottom": "0px",
    "margin-top": "-8px",
    "padding-left": "15px",
    "width": "95%",
  },
  "S8": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "margin-bottom": "20px",
    "margin-top": "0px",
    "padding-left": "1px",
    "width": "100%",
  },
  "S9": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "-webkit-transform": "rotate(45deg)",
    "background-color": "rgba(16,53,70,1)",
    "flex-direction": "column",
    "height": "8px",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
    "top": "1px",
    "transform": "rotate(45deg)",
    "width": "8px",
  },
}
</style>

<div
  className="responsive-styles__component-fbPFZZ dyyjqL S16"
>
  <div
    className="responsive-styles__component-fbPFZZ VvueK S1"
  >
    EXAMPLE TITLE
  </div>
  <div
    className="responsive-styles__component-fbPFZZ llrYRA S15"
  >
    <div
      className="S4"
    >
      <div
        className="S2"
      />
      <div
        className="S3"
      >
        Example bullet text
      </div>
    </div>
    <div
      className="S8"
    >
      <div
        className="S5"
      />
      <div
        className="S7"
      >
        An example 
        <a
          className="S6"
          href="https://www.thetimes.co.uk/test/link"
          role="link"
        >
          link
        </a>
      </div>
    </div>
    <div
      className="S11"
    >
      <div
        className="S9"
      />
      <div
        className="S10"
      >
        More example text.
      </div>
    </div>
    <div
      className="S14"
    >
      <div
        className="S12"
      />
      <div
        className="S13"
      >
        Example text 
        <strong>
          this is bold 
        </strong>
        <em>
          this is in italics.
        </em>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. key facts without title 1`] = `
<style>
{
  "S1": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "-webkit-transform": "rotate(45deg)",
    "background-color": "rgba(16,53,70,1)",
    "flex-direction": "column",
    "height": "8px",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
    "top": "1px",
    "transform": "rotate(45deg)",
    "width": "8px",
  },
  "S10": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "margin-bottom": "20px",
    "margin-top": "0px",
    "padding-left": "1px",
    "width": "100%",
  },
  "S11": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "-webkit-transform": "rotate(45deg)",
    "background-color": "rgba(16,53,70,1)",
    "flex-direction": "column",
    "height": "8px",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
    "top": "1px",
    "transform": "rotate(45deg)",
    "width": "8px",
  },
  "S12": {
    "color": "rgba(51,51,51,1)",
    "font-family": "TimesDigitalW04",
    "font-size": "16px",
    "line-height": "30px",
    "margin-bottom": "0px",
    "margin-top": "-8px",
    "padding-left": "15px",
    "width": "95%",
  },
  "S13": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "margin-bottom": "20px",
    "margin-top": "0px",
    "padding-left": "1px",
    "width": "100%",
  },
  "S14": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
  },
  "S15": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "flex-direction": "column",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
  },
  "S2": {
    "color": "rgba(51,51,51,1)",
    "font-family": "TimesDigitalW04",
    "font-size": "16px",
    "line-height": "30px",
    "margin-bottom": "0px",
    "margin-top": "-8px",
    "padding-left": "15px",
    "width": "95%",
  },
  "S3": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "margin-bottom": "20px",
    "margin-top": "0px",
    "padding-left": "1px",
    "width": "100%",
  },
  "S4": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "-webkit-transform": "rotate(45deg)",
    "background-color": "rgba(16,53,70,1)",
    "flex-direction": "column",
    "height": "8px",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
    "top": "1px",
    "transform": "rotate(45deg)",
    "width": "8px",
  },
  "S5": {
    "background-color": "transparent",
    "color": "rgba(0,102,153,1)",
    "font-family": "inherit",
    "font-size": "inherit",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
  },
  "S6": {
    "color": "rgba(51,51,51,1)",
    "font-family": "TimesDigitalW04",
    "font-size": "16px",
    "line-height": "30px",
    "margin-bottom": "0px",
    "margin-top": "-8px",
    "padding-left": "15px",
    "width": "95%",
  },
  "S7": {
    "-ms-flex-direction": "row",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "horizontal",
    "-webkit-flex-direction": "row",
    "flex-direction": "row",
    "margin-bottom": "20px",
    "margin-top": "0px",
    "padding-left": "1px",
    "width": "100%",
  },
  "S8": {
    "-ms-flex-direction": "column",
    "-webkit-box-direction": "normal",
    "-webkit-box-orient": "vertical",
    "-webkit-flex-direction": "column",
    "-webkit-transform": "rotate(45deg)",
    "background-color": "rgba(16,53,70,1)",
    "flex-direction": "column",
    "height": "8px",
    "margin-bottom": "0px",
    "margin-top": "0px",
    "padding-left": "0px",
    "top": "1px",
    "transform": "rotate(45deg)",
    "width": "8px",
  },
  "S9": {
    "color": "rgba(51,51,51,1)",
    "font-family": "TimesDigitalW04",
    "font-size": "16px",
    "line-height": "30px",
    "margin-bottom": "0px",
    "margin-top": "-8px",
    "padding-left": "15px",
    "width": "95%",
  },
}
</style>

<div
  className="responsive-styles__component-fbPFZZ dyyjqL S15"
>
  <div
    className="responsive-styles__component-fbPFZZ llrYRA S14"
  >
    <div
      className="S3"
    >
      <div
        className="S1"
      />
      <div
        className="S2"
      >
        Example bullet text
      </div>
    </div>
    <div
      className="S7"
    >
      <div
        className="S4"
      />
      <div
        className="S6"
      >
        An example 
        <a
          className="S5"
          href="https://www.thetimes.co.uk/test/link"
          role="link"
        >
          link
        </a>
      </div>
    </div>
    <div
      className="S10"
    >
      <div
        className="S8"
      />
      <div
        className="S9"
      >
        More example text.
      </div>
    </div>
    <div
      className="S13"
    >
      <div
        className="S11"
      />
      <div
        className="S12"
      >
        Example text 
        <strong>
          this is bold 
        </strong>
        <em>
          this is in italics.
        </em>
      </div>
    </div>
  </div>
</div>
`;
